--- a/Reckon Engine/Reckon Extras.vcxproj.filters
+++ b/Reckon Engine/Reckon Extras.vcxproj.filters
@@ -75,6 +75,15 @@
     <ClCompile Include="Game Core\Components\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Wrappers\vectors\vec3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Wrappers\vectors\vec4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Wrappers\vectors\vec2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input.h">
@@ -146,5 +155,21 @@
     <ClInclude Include="Game Core\Components\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Wrappers\vectors\vec3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Wrappers\vectors\vec4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Wrappers\vectors\vec2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Wrappers\vectors\VectorWrappers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="OpenGL Based\Basic Shaders\BasicUnlitVertexShader.txt" />
+    <Text Include="OpenGL Based\Basic Shaders\BasicUntlitFragmentShader.txt" />
   </ItemGroup>
 </Project>
